Add OpenGraph social preview

--- a/index.html
+++ b/index.html
@@ -12,6 +12,17 @@
     <link rel="apple-touch-icon" href="/favicon.ico" />
     <link rel="manifest" href="/manifest.json" />
     <title>Embed Motoko</title>
+
+    <meta property="og:title" content="Embed Motoko" />
+    <meta
+      property="og:description"
+      content="Embed a custom Motoko code snippet in a Medium article, blog post, or webapp."
+    />
+    <meta
+      property="og:image"
+      content="https://embed.smartcontracts.org/social.png"
+    />
+    <meta property="og:url" content="https://embed.smartcontracts.org" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
