--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="Embed an interactive Motoko code snippet anywhere."
     />
-    <link rel="apple-touch-icon" href="/favicon.ico" />
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
     <link rel="manifest" href="/manifest.json" />
     <title>Embed Motoko</title>
 
