--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
     />
     <meta
       property="og:image"
-      content="https://embed.smartcontracts.org/social.png"
+      content="https://embed.motoko.org/social.png"
     />
-    <meta property="og:url" content="https://embed.smartcontracts.org" />
+    <meta property="og:url" content="https://embed.motoko.org" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
