--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       content="https://embed.smartcontracts.org/social.png"
     />
     <meta property="og:url" content="https://embed.smartcontracts.org" />
-    <script src="/src/redirect.ts"></script>
+    <script type="module" src="/src/redirect.ts"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
