Replace embed URL with `embed.motoko.org` (#98)
* Replace 'embed.smartcontracts.org' with 'embed.motoko.org'

* Only redirect landing page

* Misc

* Update Vite config

* Update Vite config

* Misc

* Harden iframe HTML escaping logic for oEmbed endpoints

* Update test path

* Set up HTTP server backend

--- a/src/index.html
+++ b/src/index.html
@@ -18,15 +18,12 @@
       property="og:description"
       content="Embed a custom Motoko code snippet in a Medium article, blog post, or webapp."
     />
-    <meta
-      property="og:image"
-      content="https://embed.smartcontracts.org/social.png"
-    />
-    <meta property="og:url" content="https://embed.smartcontracts.org" />
+    <meta property="og:image" content="https://embed.motoko.org/social.png" />
+    <meta property="og:url" content="https://embed.motoko.org" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <script type="module" src="/src/index.tsx"></script>
+    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
